--- a/Merge_Datasets.ipynb
+++ b/Merge_Datasets.ipynb
@@ -7846,7 +7846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7856,12 +7856,12 @@
     "import scipy.stats as st\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
-    "import "
+    "import geopandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7873,7 +7873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -7958,7 +7958,7 @@
        "4  Afghanistan    2015        Male            61.04                    52.78"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7971,7 +7971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -8069,7 +8069,7 @@
        "4                              34.1  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8082,7 +8082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8092,7 +8092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -8271,7 +8271,7 @@
        "[2745 rows x 7 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8284,7 +8284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -8298,7 +8298,7 @@
        "Name: Period, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8313,7 +8313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8324,7 +8324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -8552,7 +8552,7 @@
        "[4023 rows x 10 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8563,7 +8563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8572,7 +8572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8581,7 +8581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -8809,7 +8809,7 @@
        "[1290 rows x 10 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8821,7 +8821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -9049,7 +9049,7 @@
        "[860 rows x 10 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9066,7 +9066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -9078,7 +9078,7 @@
        "Name: Period, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9089,7 +9089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9099,7 +9099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -9192,7 +9192,7 @@
        "18             0.65        24.6  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9209,7 +9209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_2015.to_csv(\"html/js/combined_2015.csv\")"
+    "df_all_2015.to_csv(\"html/js/combined_2015_raw.csv\")"
    ]
   },
   {
@@ -9218,7 +9218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_2015.to_json(\"html/js/combined_2015.json\")"
+    "df_all_2015.to_json(\"html/js/combined_2015_raw.json\")"
    ]
   },
   {
@@ -9450,9 +9450,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Period</th>\n",
+       "      <th>Life_Expectancy</th>\n",
+       "      <th>Healthy_Life_Expectancy</th>\n",
+       "      <th>%Mrt30_70_crdo_cncr_dbts_rsprtry</th>\n",
+       "      <th>Suicide100000</th>\n",
+       "      <th>Ttl_alc_percapita_15+</th>\n",
+       "      <th>Posioning100000</th>\n",
+       "      <th>Smoking15+</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>77.84</td>\n",
+       "      <td>69.03</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>29.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>76.54</td>\n",
+       "      <td>65.99</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>19.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>76.17</td>\n",
+       "      <td>66.86</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>9.55</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>24.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>74.51</td>\n",
+       "      <td>66.00</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.84</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>27.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>82.28</td>\n",
+       "      <td>70.56</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>17.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Location  Period  Life_Expectancy  Healthy_Life_Expectancy  \\\n",
+       "0     Albania    2015            77.84                    69.03   \n",
+       "9     Algeria    2015            76.54                    65.99   \n",
+       "18  Argentina    2015            76.17                    66.86   \n",
+       "27    Armenia    2015            74.51                    66.00   \n",
+       "36  Australia    2015            82.28                    70.56   \n",
+       "\n",
+       "    %Mrt30_70_crdo_cncr_dbts_rsprtry  Suicide100000  Ttl_alc_percapita_15+  \\\n",
+       "0                               17.4            6.0                   6.74   \n",
+       "9                               14.4            3.2                   0.93   \n",
+       "18                              16.1            8.8                   9.55   \n",
+       "27                              23.0            7.0                   5.84   \n",
+       "36                               9.3           13.8                  10.83   \n",
+       "\n",
+       "    Posioning100000  Smoking15+  \n",
+       "0              0.43        29.9  \n",
+       "9              0.80        19.3  \n",
+       "18             0.65        24.6  \n",
+       "27             0.67        27.9  \n",
+       "36             0.20        17.7  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
